2006-04-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* doc/eth_phy.sgml: Fixed a few typos

2005-08-25  Markus Schade <marks@peppercon.de>

	* src/INLXT972.c: 
	* cdl/phy_eth_drivers.cdl: Add support for Intel LXT972

2004-10-04  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/phy_eth_drivers.cdl: We call the delay function via VV so we
	require VV support.

2003-11-07  Gary Thomas  <gary@mlbassoc.com>

	* src/DP83847.c: 
	* src/AM79C874.c: 
	* cdl/phy_eth_drivers.cdl: Make auto-negotiation timeout configurable.

2003-09-11  Gary Thomas  <gary@mlbassoc.com>

	* include/eth_phy.h: Minor improvement in status bitfield [comments]

	* doc/eth_phy.sgml: New file - add basic documentation on PHY API.

2003-08-26  Gary Thomas  <gary@mlbassoc.com>

	* src/DP83847.c: 
	* src/AM79C874.c: New file(s) - driver(s) for PHY devices.

	* src/eth_phy.c: 
	* include/eth_phy_dev.h: 
	* include/eth_phy.h: 
	* cdl/phy_eth_drivers.cdl: Add device/chip specific drivers.

2003-08-19  Gary Thomas  <gary@mlbassoc.com>

	* src/eth_phy.c: 
	* include/eth_phy.h: 
	* cdl/phy_eth_drivers.cdl: New file(s) - generic API for dealing
	with ethernet PHY devices, allowing network drivers more flexibility.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
// Copyright (C) 2003 Gary Thomas
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//